# web_crawler

./: .gitguardian.yaml  .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  README.md  docker-compose.distributed.yml  docker-compose.yml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
api/proto/: buf.gen.yaml  buf.yaml
cmd/crawler/: main.go
configs/: plugins.yaml.example
deploy/grafana/: crawler-overview.json
deploy/prometheus/: alerts.yml
docs/: PRD.md  SDS.md  SRS.md  performance.md  plugin-guide.md  security.md
docs/reference/: 01-legal-considerations.md  02-technical-stack.md  03-policy-guidelines.md  04-stability-continuity.md  05-data-storage.md  06-additional-considerations.md  07-url-frontier-scheduling.md  08-spa-javascript-rendering.md  09-data-quality.md  10-special-content-types.md  11-internationalization.md  12-site-specific-strategies.md  13-testing-environment.md  14-sdk-architecture.md  15-go-python-binding.md  16-developer-experience.md  README.md
examples/basic/: main.go
examples/middleware/: main.go
examples/plugin/: main.go
examples/storage/: main.go
internal/pipeline/: doc.go
internal/scheduler/: doc.go
internal/testutil/: assertions.go  benchmark_test.go  httpserver.go  httpserver_test.go  integration_test.go
python/: README.md  pyproject.toml
python/crawler/: __init__.py  _converters.py  async_client.py  client.py  exceptions.py  types.py
python/tests/: test_async_client.py  test_client.py  test_converters.py  test_exceptions.py  test_types.py
(+147 files in other folders)
